--- a/agents-docs/content/docs/talk-to-your-agents/react/chat-button.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/react/chat-button.mdx
@@ -30,10 +30,7 @@ pnpm add @inkeep/cxkit-react-oss
     Use an API key for secure authentication in production:
     
     ```tsx
-    import {
-      InkeepChatButton,
-      type InkeepChatButtonProps,
-    } from "@inkeep/cxkit-react-oss";
+    import { InkeepChatButton, type InkeepChatButtonProps } from "@inkeep/cxkit-react-oss";
 
     const buttonProps: InkeepChatButtonProps = {
       aiChatSettings: {
