--- a/agents-docs/content/docs/talk-to-your-agents/react/custom-trigger.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/react/custom-trigger.mdx
@@ -33,10 +33,7 @@ pnpm add @inkeep/cxkit-react-oss
     
     ```tsx
     import { useState } from "react";
-    import {
-      InkeepModalChat,
-      type InkeepModalChatProps,
-    } from "@inkeep/cxkit-react";
+    import { InkeepModalChat, type InkeepModalChatProps } from "@inkeep/cxkit-react-oss";
 
     function App() {
       const [isModalOpen, setIsModalOpen] = useState(false);
