--- a/agents-docs/content/docs/talk-to-your-agents/react/embedded-chat.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/react/embedded-chat.mdx
@@ -30,10 +30,7 @@ pnpm add @inkeep/cxkit-react-oss
     Use an API key for secure authentication in production:
     
     ```tsx
-    import {
-      InkeepEmbeddedChat,
-      type InkeepEmbeddedChatProps,
-    } from "@inkeep/cxkit-react-oss";
+    import { InkeepEmbeddedChat, type InkeepEmbeddedChatProps } from "@inkeep/cxkit-react-oss";
 
     export default function App() {
       const embeddedChatProps: InkeepEmbeddedChatProps = {
