--- a/agents-docs/content/docs/talk-to-your-agents/react/side-bar-chat.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/react/side-bar-chat.mdx
@@ -34,10 +34,7 @@ pnpm add @inkeep/cxkit-react-oss
     
     ```tsx
     import { useState } from "react";
-    import {
-      InkeepSidebarChat,
-      type InkeepSidebarChatProps,
-    } from "@inkeep/cxkit-react-oss";
+    import { InkeepSidebarChat, type InkeepSidebarChatProps } from "@inkeep/cxkit-react-oss";
 
     export default function App() {
       const [isOpen, setIsOpen] = useState(false);
