--- a/agents-docs/content/docs/typescript-sdk/agent-settings.mdx
+++ b/agents-docs/content/docs/typescript-sdk/agent-settings.mdx
@@ -139,14 +139,14 @@ models: {
     }
   },
   structuredOutput: {
-    model: "openai/gpt-4o-mini-2024-07-18", // For structured JSON output only
+    model: "openai/gpt-4.1-mini-2025-04-14", // For structured JSON output only
     providerOptions: {
       temperature: 0.1,
       maxTokens: 1024
     }
   },
   summarizer: {
-    model: "anthropic/claude-3-haiku-20240307", // For summaries and status updates
+    model: "anthropic/claude-3-5-haiku-20241022", // For summaries and status updates
     providerOptions: {
       temperature: 0.5,
       maxTokens: 1000
@@ -167,13 +167,13 @@ The framework currently supports models from:
 
 - **Anthropic**: `anthropic/claude-sonnet-4-20250514`, `anthropic/claude-3-5-haiku-20241022`, etc.
 - **OpenAI**: `openai/gpt-5-2025-08-07`, `openai/gpt-4.1-mini-2025-04-14`, `openai/gpt-4.1-nano-2025-04-14`, etc.
-- **Google**: `google/gemini-2.5-flash`, `google/gemini-2.5-flash-lite`, etc.
+- **Google**: `google/gemini-2.5-pro`, `google/gemini-2.5-flash`, `google/gemini-2.5-flash-lite`, etc.
 
 **API Keys**: You need the appropriate API key for the provider you choose to use:
 
 - `ANTHROPIC_API_KEY` for Anthropic models
 - `OPENAI_API_KEY` for OpenAI models  
-- `GOOGLE_API_KEY` for Google models
+- `GOOGLE_GENERATIVE_AI_API_KEY` for Google models
 
 ### Provider Options
 
