--- a/agents-docs/content/docs/community/contributing/environment-configuration.mdx
+++ b/agents-docs/content/docs/community/contributing/environment-configuration.mdx
@@ -1,4 +1,10 @@
-# Environment Configuration Guide
+---
+title: Environment Configuration
+description: How to configure the environment variables for the Inkeep Agent Framework
+icon: "LuSettings"
+---
+
+# Environment Configuration
 
 ## Overview
 
