--- a/agents-docs/content/docs/quick-start/signoz.mdx
+++ b/agents-docs/content/docs/quick-start/signoz.mdx
@@ -83,7 +83,7 @@ To get your SigNoz API key:
 
 ### Step 2: Configure Run API Environment
 
-Navigate to your `agents-run-api` directory under `apps` and create or update your `.env` file:
+Navigate to your `run-api` directory under `apps` and create or update your `.env` file:
 
 ```bash
 # OpenTelemetry Configuration for SigNoz Cloud
