--- a/agents-docs/content/docs/quick-start/getting-started.mdx
+++ b/agents-docs/content/docs/quick-start/getting-started.mdx
@@ -43,7 +43,7 @@ If you don't have pnpm yet, use Corepack:
 ### Step 1: Create a new agents project
 
 ```bash
-npx @inkeep/create-agents my-agent-directory
+npx @inkeep/create-agents
 cd my-agent-directory
 ```
 
@@ -54,16 +54,12 @@ corepack use pnpm@latest-10  # pins pnpm version in package.json
 
 ### Step 2: Start the development server
 
+Upon running `pnpm dev`, the UI dashboard will automatically open at http://localhost:3000 in your browser.
+
 ```bash
 pnpm dev
 ```
 
-### Step 3: Install the Inkeep CLI
+### Step 3: Chat with your agent
 
-```bash
-pnpm install -g @inkeep/agents-cli
-```
-
-### Step 6: Chat with your agent
-
-Go to the project you created, and click into the weather graph. Then click the "Try It" button to begin a conversation with your agent.
+Navigate to the weather graph project that was automatically created, click into the weather graph, and then click the "Try It" button to start chatting with the agent.
