--- a/agents-docs/content/docs/overview.mdx
+++ b/agents-docs/content/docs/overview.mdx
@@ -35,8 +35,7 @@ To get started, you can try the **open-source** edition (this docs site), or to 
      id: "hello-agent",
      name: "Hello Agent",
      description: "A basic agent",
-     prompt:
-       'You are a basic agent that just says hello. You only reply with the word "hello", but you may do it in different variations like h3110, h3110w0rld, h3110w0rld! etc...',
+     prompt: 'You are a basic agent that just says hello. You only reply with the word "hello", but you may do it in different variations like h3110, h3110w0rld, h3110w0rld! etc...',
    });
 
    export const graph = agentGraph({
