--- a/agents-docs/content/docs/quick-start/observability.mdx
+++ b/agents-docs/content/docs/quick-start/observability.mdx
@@ -1,19 +1,17 @@
 ---
 title: Observability
 sidebarTitle: Observability
-description: Observe live traces of your agents and services with SigNoz
+description: Monitor your agents with SigNoz, an open-source observability platform that receives traces from the framework's built-in OpenTelemetry instrumentation.
 icon: "LuEye"
 keywords: SigNoz, tracing, observability, OpenTelemetry, monitoring, distributed tracing
 ---
 
 ## Overview
 
-Monitor your agent performance and behavior with SigNoz, an open-source observability platform. The Inkeep agent framework includes built-in OpenTelemetry instrumentation that exports traces directly to SigNoz.
-
 You can set up SigNoz in two ways:
 
-1.  **Cloud Setup**: Use SigNoz Cloud for production or team environments
-2. **Local Setup**: Run SigNoz locally using Docker for development
+1.  **Cloud Setup**: Use SigNoz Cloud (recommended)
+2. **Local Setup**: Run SigNoz locally using Docker
 
 ## Option 1: SigNoz Cloud Setup
 
